--- a/index.html
+++ b/index.html
@@ -10,6 +10,177 @@
 <link rel="apple-touch-icon" href="./icon-1024x1024.png">
 
 <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
+<script type="module">
+  import { createClient } from "https://esm.sh/@supabase/supabase-js";
+
+  /* ================= CONFIG ================= */
+  const SUPABASE_URL = "https://iznxrukdqbrcxjzhvwyk.supabase.co";
+  const SUPABASE_KEY = "<YOUR_ANON_KEY>"; // Make sure this is anon key
+  const supabase = createClient(SUPABASE_URL, SUPABASE_KEY);
+
+  const APP_URL = 'https://bet-point.appsmith.com/app/signals/page1-68b217383a43874978908b5c?embed=true';
+
+  let rowId = null;
+  let loginCode = null;
+  let checkInterval = null;
+  let autoLoginDisabled = false;
+  let isSubmitting = false;
+
+  /* ================= AUTH STATE ================= */
+  function setAuthState(isAuthed, reason = null) {
+    const overlay = document.getElementById('loginOverlay');
+    const frame = document.getElementById('appFrame');
+
+    if (isAuthed) {
+      overlay.style.display = 'none';
+      frame.src = APP_URL;
+      startCheckLoop();
+    } else {
+      localStorage.removeItem('rowId');
+      localStorage.removeItem('loginCode');
+      frame.src = 'about:blank';
+      overlay.style.display = 'flex';
+      stopCheckLoop();
+      if (reason) {
+        document.getElementById('loginError').textContent = "Logged out: " + reason;
+      }
+      autoLoginDisabled = true;
+    }
+  }
+
+  /* ================= AUTO LOGIN ================= */
+  window.addEventListener('DOMContentLoaded', async () => {
+    if (autoLoginDisabled) return;
+
+    rowId = new URLSearchParams(window.location.search).get('row_id');
+    if (!rowId) {
+      rowId = localStorage.getItem('rowId') || null;
+    }
+
+    const savedCode = localStorage.getItem('loginCode');
+    if (rowId && savedCode) {
+      loginCode = savedCode;
+      setAuthState(true);
+    }
+  });
+
+  /* ================= LOGIN ================= */
+  async function submitRowId(event) {
+    if (event) event.preventDefault();
+    if (isSubmitting) return;
+    isSubmitting = true;
+    autoLoginDisabled = false;
+
+    const error = document.getElementById('loginError');
+    const spinner = document.getElementById('spinner');
+    rowId = rowId || document.getElementById('rowIdInput').value.trim();
+    if (!rowId) {
+      isSubmitting = false;
+      error.textContent = 'Please enter a password';
+      return;
+    }
+
+    error.textContent = '';
+    spinner.style.display = 'block';
+    stopCheckLoop(); // suspend normal polling while waiting for code
+
+    try {
+      let code = null;
+      const start = Date.now();
+
+      // Poll the table for latest code for up to 5s
+      while (!code && Date.now() - start < 5000) {
+        const { data, error: fetchError } = await supabase
+          .from('signal_login')
+          .select('code')
+          .eq('row_id', rowId)
+          .order('created_at', { ascending: false })
+          .limit(1)
+          .maybeSingle();
+
+        if (fetchError) {
+          console.error('Supabase fetch error:', fetchError);
+        }
+
+        if (data?.code) {
+          code = data.code;
+          break;
+        }
+
+        // Wait 500ms before retry
+        await new Promise(r => setTimeout(r, 500));
+      }
+
+      if (!code) {
+        error.textContent = 'Login failed: no code found';
+        return;
+      }
+
+      loginCode = code;
+      localStorage.setItem('rowId', rowId);
+      localStorage.setItem('loginCode', loginCode);
+
+      setAuthState(true);
+
+      // resume session polling after 10s
+      setTimeout(startCheckLoop, 10000);
+
+    } catch (err) {
+      console.error("Login error:", err);
+      error.textContent = 'Server error';
+    } finally {
+      spinner.style.display = 'none';
+      isSubmitting = false;
+    }
+  }
+
+  /* ================= POLL SESSION ================= */
+  async function checkLastLogin() {
+    if (!rowId || !loginCode) return;
+
+    try {
+      const { data, error } = await supabase
+        .from('signal_login')
+        .select('code')
+        .eq('row_id', rowId)
+        .order('created_at', { ascending: false })
+        .limit(1)
+        .maybeSingle();
+
+      if (error) {
+        console.error('checkLastLogin fetch error:', error);
+        return;
+      }
+
+      if (!data?.code || data.code !== loginCode) {
+        setAuthState(false, 'session replaced');
+      }
+
+    } catch (err) {
+      console.error('checkLastLogin exception:', err);
+      setAuthState(false, 'checklast exception');
+    }
+  }
+
+  function startCheckLoop() {
+    stopCheckLoop();
+    checkInterval = setInterval(checkLastLogin, 5000);
+  }
+
+  function stopCheckLoop() {
+    if (checkInterval) {
+      clearInterval(checkInterval);
+      checkInterval = null;
+    }
+  }
+
+  /* ================= ENTER KEY SUBMIT ================= */
+  document.getElementById('rowIdInput').addEventListener('keydown', e => {
+    if (e.key === 'Enter') submitRowId(e);
+  });
+  document.getElementById('loginBtn').addEventListener('click', submitRowId);
+
+</script>
 
 <style>
 html, body { margin:0; height:100%; width:100%; font-family:Arial,sans-serif; background:#000; }
@@ -31,142 +202,13 @@ iframe { width:100%; height:100%; border:none; display:block; }
   <img src="./icon-1024x1024.png" alt="Logo">
   <h2>Enter Password</h2>
   <input type="password" id="rowIdInput" placeholder="Password">
-  <button onclick="submitRowId()">Submit</button>
+  <button id="loginBtn">Submit</button>
   <div id="loginError"></div>
   <div id="spinner"></div>
 </div>
 
 <!-- APP -->
 <iframe id="appFrame"></iframe>
-
-<script type="module">
-import { createClient } from "https://esm.sh/@supabase/supabase-js";
-
-/* ================= CONFIG ================= */
-const SUPABASE_URL = "https://iznxrukdqbrcxjzhvwyk.supabase.co";
-const SUPABASE_KEY = "<YOUR_ANON_KEY>";
-const supabase = createClient(SUPABASE_URL, SUPABASE_KEY);
-
-const APP_URL      = 'https://bet-point.appsmith.com/app/signals/page1-68b217383a43874978908b5c?embed=true';
-const POLL_MS      = 5000;
-const HEARTBEAT_MS = 10000;
-
-let rowId = null;
-let loginCode = null;
-let pollTimer = null;
-let heartbeatTimer = null;
-let gracePeriod = false;
-
-/* ================= HEARTBEAT ================= */
-function startHeartbeat() {
-  stopHeartbeat();
-  heartbeatTimer = setInterval(() => {
-    if (!rowId || !loginCode) return;
-    console.log("🫀 Heartbeat ping");
-  }, HEARTBEAT_MS);
-}
-function stopHeartbeat() { if (heartbeatTimer) { clearInterval(heartbeatTimer); heartbeatTimer = null; } }
-document.addEventListener("visibilitychange", () => document.visibilityState==='visible'?startHeartbeat():stopHeartbeat());
-
-/* ================= AUTH STATE ================= */
-function setAuthState(isAuthed, reason=null){
-  const overlay = document.getElementById('loginOverlay');
-  const frame = document.getElementById('appFrame');
-  if(isAuthed){
-    overlay.style.display='none';
-    frame.src=APP_URL;
-    startHeartbeat();
-  } else {
-    localStorage.removeItem('rowId');
-    localStorage.removeItem('loginCode');
-    if(pollTimer){ clearInterval(pollTimer); pollTimer=null; }
-    stopHeartbeat();
-    frame.src='about:blank';
-    overlay.style.display='flex';
-    document.getElementById('loginError').textContent="Logged out: "+reason;
-  }
-}
-
-/* ================= AUTO LOGIN ================= */
-window.addEventListener('DOMContentLoaded', async()=>{
-  const savedRow = localStorage.getItem('rowId');
-  const savedCode = localStorage.getItem('loginCode');
-  if(savedRow && savedCode){
-    rowId=savedRow;
-    loginCode=savedCode;
-    setAuthState(true);
-    startPolling();
-  }
-});
-
-/* ================= LOGIN ================= */
-async function submitRowId(){
-  const error = document.getElementById('loginError');
-  const spinner = document.getElementById('spinner');
-  rowId=document.getElementById('rowIdInput').value.trim();
-  if(!rowId) return;
-  error.textContent='';
-  spinner.style.display='block';
-  stopPolling();
-  loginCode=null;
-  gracePeriod=true;
-
-  try{
-    // Poll signal_login for latest code after submit
-    let code=null;
-    const start=Date.now();
-    while(!code && Date.now()-start<5000){
-      const { data, error: fetchErr } = await supabase
-        .from('signal_login')
-        .select('code')
-        .eq('row_id', rowId)
-        .order('created_at',{ascending:false})
-        .limit(1)
-        .maybeSingle();
-      if(!fetchErr && data?.code){ code=data.code; break; }
-      await new Promise(r=>setTimeout(r,500));
-    }
-
-    if(!code){ error.textContent='Login failed'; return; }
-
-    loginCode=code;
-    localStorage.setItem('rowId', rowId);
-    localStorage.setItem('loginCode', loginCode);
-    setAuthState(true);
-
-    setTimeout(()=>gracePeriod=false,4000);
-    setTimeout(startPolling,10000);
-
-  } catch(e){ console.error(e); error.textContent='Server error'; }
-  finally{ spinner.style.display='none'; }
-}
-
-/* ================= POLLING ================= */
-function startPolling(){
-  if(pollTimer) clearInterval(pollTimer);
-  const pollFn=async()=>{
-    if(gracePeriod) return;
-    if(!rowId || !loginCode) return;
-    try{
-      const { data } = await supabase
-        .from('signal_login')
-        .select('code')
-        .eq('row_id', rowId)
-        .order('created_at',{ascending:false})
-        .limit(1)
-        .maybeSingle();
-      if(!data?.code || data.code!==loginCode){
-        console.warn("Auth invalid, logging out");
-        setAuthState(false,"Logged in elsewhere");
-      }
-    } catch(e){ console.error("Polling exception",e); }
-  };
-  pollFn();
-  pollTimer=setInterval(pollFn,POLL_MS);
-}
-function stopPolling(){ if(pollTimer){ clearInterval(pollTimer); pollTimer=null; } }
-
-</script>
 
 </body>
 </html>
