--- a/index.html
+++ b/index.html
@@ -37,10 +37,16 @@ iframe { width:100%; height:100%; border:none; display:block; }
 <!-- APP -->
 <iframe id="appFrame"></iframe>
 
-<script>
+<script type="module">
+import { createClient } from "https://esm.sh/@supabase/supabase-js";
+
 /* ================= CONFIG ================= */
-const CHECK_LAST4  = 'https://iznxrukdqbrcxjzhvwyk.supabase.co/functions/v1/checklast4';
+const SUPABASE_URL = "https://iznxrukdqbrcxjzhvwyk.supabase.co";
+const SUPABASE_KEY = "<YOUR_ANON_KEY>"; // frontend safe
+const supabase = createClient(SUPABASE_URL, SUPABASE_KEY);
+
 const VERIFY_URL   = 'https://iznxrukdqbrcxjzhvwyk.supabase.co/functions/v1/verify-link';
+const CHECK_LAST4  = 'https://iznxrukdqbrcxjzhvwyk.supabase.co/functions/v1/checklast4';
 const APP_URL      = 'https://bet-point.appsmith.com/app/signals/page1-68b217383a43874978908b5c?embed=true';
 const POLL_MS      = 5000;
 
@@ -64,7 +70,7 @@ function setAuthState(isAuthed, reason = null) {
     overlay.style.display = 'flex';
     if (pollTimer) clearInterval(pollTimer);
     pollTimer = null;
-    if (reason) document.getElementById('loginError').textContent = "Logged out: " + reason;
+    if(reason) document.getElementById('loginError').textContent = "Logged out: " + reason;
   }
 }
 
@@ -94,27 +100,45 @@ async function submitRowId() {
   loginCode = crypto.randomUUID();
 
   try {
-    // Call verify-link to check password/code
-    const res = await fetch(VERIFY_URL, {
+    // --- Step 1: call verify-link as usual ---
+    const verifyRes = await fetch(VERIFY_URL, {
       method:'POST',
       headers:{ 'Content-Type':'application/json' },
       body: JSON.stringify({ row_id: rowId, code: loginCode })
     });
-    const data = await res.json();
+    const verifyData = await verifyRes.json();
 
-    if (!data.valid) {
+    if (!verifyData.valid) {
       error.textContent = 'Login failed';
       return;
     }
 
+    // --- Step 2: wait 3 seconds ---
+    await new Promise(r => setTimeout(r, 3000));
+
+    // --- Step 3: pull latest code directly from signal_login table ---
+    const { data, error: codeError } = await supabase
+      .from('signal_login')
+      .select('code')
+      .eq('row_id', rowId)
+      .order('created_at', { ascending: false })
+      .limit(1)
+      .maybeSingle();
+
+    if (codeError || !data?.code) {
+      error.textContent = 'Login failed: no code found';
+      return;
+    }
+
+    loginCode = data.code;
+
+    // --- Step 4: store and continue as usual ---
     localStorage.setItem('rowId', rowId);
     localStorage.setItem('loginCode', loginCode);
 
     setAuthState(true);
-
     gracePeriod = true;
     setTimeout(() => gracePeriod = false, 3000);
-
     startPolling();
 
   } catch (err) {
